--- a/locker_base/requirements.txt
+++ b/locker_base/requirements.txt
@@ -1,11 +1,22 @@
 autopep8==1.5.7
+certifi==2020.12.5
+chardet==4.0.0
+flake8==3.9.2
+idna==2.10
+importlib-metadata==4.0.1
 imutils==0.5.4
+mccabe==0.6.1
 numpy==1.20.2
 opencv-python==4.5.1.48
 picamera==1.13
 Pillow==8.2.0
 pkg-resources==0.0.0
 pycodestyle==2.7.0
+pyflakes==2.3.1
+requests==2.25.1
 RPi.GPIO==0.7.0
 scipy==1.6.3
 toml==0.10.2
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+zipp==3.4.1
