major rework to acc for mqtt and post to webserver

--- a/locker_base/config/config.json
+++ b/locker_base/config/config.json
@@ -1,7 +1,8 @@
 {
-    "meta": {
-        "_id": "1",
-        "v_code": "YtZQA#mCC#D4",
-        "webserver_address": "http://192.168.1.8:8090"
+    "id": "",
+    "verification_code": "",
+    "webserver_address": "",
+    "mqtt": {
+        "host": ""
     }
 }
